crates/webfang_mcp/tests/snapshots/mcp_advertised_schema_snapshot_test__bridged_scrape_with_options.snap
---
source: crates/webfang_mcp/tests/mcp_advertised_schema_snapshot_test.rs
expression: advertised_pretty(tool)
---
{
  "$defs": {
    "McpUrl": {
      "format": "uri",
      "type": "string"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "download_documents": {
      "default": false,
      "description": "Download documents from the page",
      "type": [
        "boolean",
        "null"
      ]
    },
    "download_images": {
      "default": false,
      "description": "Download images from the page",
      "type": [
        "boolean",
        "null"
      ]
    },
    "ignore_robots": {
      "default": false,
      "description": "Skip robots.txt enforcement",
      "type": [
        "boolean",
        "null"
      ]
    },
    "max_pages": {
      "description": "Maximum pages to scrape",
      "maximum": 100000,
      "minimum": 1,
      "type": [
        "integer",
        "null"
      ]
    },
    "selector": {
      "default": "body",
      "description": "CSS selector for content extraction",
      "type": [
        "string",
        "null"
      ]
    },
    "url": {
      "description": "URL to scrape (required unless using a subcommand)",
      "type": "string"
    }
  },
  "required": [
    "url"
  ],
  "type": "object"
}
