crates/webfang_mcp/tests/snapshots/mcp_advertised_schema_snapshot_test__unbridged_scrape_url.snap
---
source: crates/webfang_mcp/tests/mcp_advertised_schema_snapshot_test.rs
expression: advertised_pretty(UNBRIDGED_CONTROL_TOOL)
---
{
  "$defs": {
    "McpUrl": {
      "format": "uri",
      "type": "string"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "url": {
      "$ref": "#/$defs/McpUrl",
      "description": "URL to scrape (must start with http:// or https://)"
    }
  },
  "required": [
    "url"
  ],
  "type": "object"
}
